trunk/Archive2/99/1e6b79b14731e5/output
main.cpp:27:5: error: no matching function for call to 'f'
    f(std::vector<int>()); // Error
    ^
main.cpp:21:6: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'A' for 1st argument
void f(A);
     ^
1 error generated.
